# pulumi-datafy

./: .ci-mgmt.yaml  .golangci.yml  Makefile  README.md
.github/actions/download-prerequisites/: action.yml
.github/actions/download-provider/: action.yml
.github/actions/upload-prerequisites/: action.yml
.github/workflows/: build_provider.yml  build_sdk.yml  prerequisites.yml  publish.yml  resync-build.yml
examples/: examples_test.go  go.mod
provider/: go.mod  go.sum  resources.go
provider/cmd/pulumi-resource-datafy/: bridge-metadata.json  main.go  schema.json
provider/cmd/pulumi-tfgen-datafy/: main.go
sdk/: go.mod
sdk/dotnet/: Account.cs  GetAccount.cs  GetRoleArn.cs  GetToken.cs  Provider.cs  Pulumi.Datafy.csproj  RoleArn.cs  Token.cs  Utilities.cs
sdk/dotnet/Config/: Config.cs  README.md
sdk/dotnet/Region/: Enums.cs
sdk/go/datafy/: account.go  doc.go  getAccount.go  getRoleArn.go  getToken.go  init.go  provider.go  pulumi-plugin.json  roleArn.go  token.go
sdk/go/datafy/config/: config.go
sdk/go/datafy/internal/: pulumiUtilities.go
sdk/nodejs/: account.ts  getAccount.ts  getRoleArn.ts  getToken.ts  index.ts  package.json  provider.ts  roleArn.ts  token.ts  tsconfig.json
sdk/nodejs/config/: vars.ts
sdk/python/: pyproject.toml
sdk/python/pulumi_datafy/: README.md  __init__.py  account.py  get_account.py  get_role_arn.py  get_token.py  provider.py  role_arn.py  token.py
sdk/python/pulumi_datafy/config/: __init__.pyi  vars.py
sdk/python/pulumi_datafy/region/: _enums.py
